# noteedit-svn

./: AUTHORS  FAQ  FAQ.de  INSTALL  INSTALL.de  NEWS  README  README.de  TODO  VERSION  configure.in.in  noteedit.kdevelop
admin/: acinclude.m4.in  mkinstalldirs
branches/2.8/: README  configure.in.in
branches/2.8/kguitar_excerpt/: chordlistitem.cpp
branches/2.8/noteedit/: ScoreEditor.h  keyoffs.cpp  keysig.h  lilytest.h  mainframewidget.cpp  mainframewidget.h  midimapper.h  miditimescale.h  muselement.h  musicxmlexport.cpp  noteedit_part.h  notesel.cpp  pmxexport.cpp  timesig.h  timesigDia.ui  tupletdialog_impl.cpp
branches/2.8/po/: hu.po
branches/code_cleanup/: ChangeLog  INSTALL  INSTALL.de  TODO
branches/code_cleanup/kguitar_excerpt/: chordlist.cpp  fingerlist.cpp  fingerlist.h
branches/code_cleanup/noteedit/: Makefile.am  abcexport.cpp  abcexport.h  chord.cpp  chord.h  clef.cpp  clef.h  constants.h  dbufferwidget.h  filehandler.cpp  grammar.yy  internals.h  keyoffs.cpp  keyoffs.h  keysig.cpp  keysig.h  layout.cpp  lilyexport.cpp  lilyexport.h  mainframewidget.cpp  mainframewidget.h  metronom.ui  mididevicelistbox.h  midiexport.cpp  midimapper.cpp  miditimescale.cpp  mupWarning.ui  muselement.cpp  muselement.h  musicxmlexport.cpp  musicxmlexport.h  musicxmlimport.cpp  musicxmlimport.h  musixtex.cpp  noteedit.desktop  notesel.h  parsertypes.h  pmxexport.cpp  pmxexport.h  resource.cpp  (+14 more)
branches/code_cleanup/po/: it.po  sl.po  sv.po
branches/stable-2.8/: AUTHORS  ChangeLog  Makefile.am  NEWS  TODO  VERSION
branches/stable-2.8/kguitar_excerpt/: chordlist.h  fingers.h  global.h  tabcolumn.h
branches/stable-2.8/noteedit/: configuredialog.cpp  dbufferwidget.cpp  expWarn.ui  lexik.ll  lyrics.ui.qt2  mainframewidget.cpp  midiexport.h  miditimescale.cpp  musicxmlcommon.h  musicxmlexport.cpp  musicxmlimport.cpp  musicxmlimport.h  noteedit.desktop  noteedit_part.rc  outputbox.cpp  parsertypes.h  pmxexport.h  resource.cpp  sign.h  staffPropFrm.cpp  staffPropFrm.h  tempotrack.cpp  textDialog_impl.h  tip.ui  tse3handler.h  voice.cpp
branches/stable-2.8/po/: it.po  sl.po
doc/: Makefile.in
doc/de/: Makefile.in  de.po  index.docbook
doc/noteedit/: Makefile.in  index.docbook
homepage/: NEWS  authors.html  contact.html  docs.html  download.html  faq.html  features.html  help.html  index.html  license.html  lists.html  noteedit.html  shots.html  style.css
kguitar_excerpt/: Makefile.in  README.kguitar_excerpt
noteedit/: Makefile.am  Makefile.in  abcexport.cpp  abcexport.h  aboutinfo.h  clef.cpp  clef.h  configuredialog.cpp  configuredialog.h  filehandler.cpp  grammar.yy  layout.cpp  lexik.ll  lilyexport.cpp  lilyexport.h  lilytest.cpp  main.cpp  mainframewidget.cpp  mainframewidget.h  midiexport.cpp  midimapper.cpp  miditimescale.cpp  muselement.cpp  muselement.h  musicxmlcommon.cpp  musicxmlexport.cpp  musicxmlexport.h  musicxmlimport.cpp  musixhint.cpp  musixhint.h  musixtex.cpp  musixtex.h  noteedit_part.cpp  noteeditui.rc  outputbox.h  pmxexport.cpp  resource.cpp  resource.h  rest.cpp  scaleEd.ui  (+18 more)
noteedit/examples/: ballade_no1.not  example12.not  example8_fluid.not
noteedit/icons/: Makefile.am  Makefile.in
noteedit/lyrics/: water2.txt
noteedit/resources/: Makefile.in  alto.xbm  altop.ppm  cursor_32ndnote.xbm  cursor_tinysixteenth.xbm  dalSegnoAlCoda.ppm  dalSegnoAlCoda_red.ppm  dflat_grey.ppm  drum_clef_red.ppm  flag.ppm  flag.xbm  flag_grey.ppm  full.xbm  natur_grey.ppm  per_cross2.ppm  per_triang.xbm  r128_grey.ppm  rquarter_mag.ppm  rquarter_red.ppm  sforzato_be_red.ppm  time_34.ppm  time_38.ppm  tinybase.ppm  tinybase_red.ppm  treblep_red.ppm  tuplet7.xbm  tuplet8.ppm
po/: Makefile.in  de.po  es.po  fr.po  hu.po  it.po  noteedit.pot  ru.po  sk.po  sl.po  sv.po
tags/2.7.4/: AUTHORS  INSTALL.de  README  VERSION  config.h.in  configure.in.in  subdirs
tags/2.7.4/admin/: locinst.sh
tags/2.7.4/homepage/: index.html
tags/2.7.4/kguitar_excerpt/: Makefile.in  chord.cpp  (+3 more)
tags/2.7.4/noteedit/resources/: Makefile.am  alto_red.ppm  altom_red.ppm  altop.xbm  bass.xbm  bassp.xbm  cursor_sixteenthnote.xbm  dcross.xbm  dcross_icon.ppm  drum_clef.xbm  endbar_red.ppm  fermate_be.xbm  natur.xbm  nbase_grey.ppm  per_cross2.xbm  r32_mag.ppm  r64.ppm  r8_red.ppm  repClose.ppm  repOpenClose.xbm  stop_icon.xbm  treble.xbm
tags/2.8.0/: README.de
trunk/: ChangeLog  FAQ  FAQ.de  INSTALL  INSTALL.de  NEWS  SConstruct  TODO  VERSION  configure.in.in
trunk/admin/: am_edit
trunk/doc/: SConscript
trunk/kguitar_excerpt/: Makefile.am  SConscript  fingerlist.cpp  tabcolumn.cpp  tabtrack.cpp  tabtrack.h
trunk/noteedit/: Makefile.am  SConscript  ScoreEditor.cpp  ScoreEditor.h  abcexport.cpp  abcexport.h  abcexportform.ui  aboutinfo.h  beaming.h  chord.cpp  chord.h  chorddiagram.cpp  chorddiagram.h  clef.cpp  clef.h  configuredefaultvalues.h  configuredialog.cpp  configuredialog.h  constants.h  dbufferwidget.cpp  expWarn.ui  exports.ui  filehandler.cpp  filehandler.h  grammar.yy  internals.cpp  internals.h  keyoffs.cpp  keyoffs.h  keysig.cpp  keysig.h  layout.cpp  layout.h  lexik.ll  lilyexport.cpp  lilyexport.h  lilypondexportform.ui  lilytest.cpp  lines.ui  listSel.ui  (+65 more)
trunk/noteedit/examples/: example4.not  example8.not
trunk/noteedit/resources/: bass.ppm  cross.xbm  cursor_128thnote.xbm  cursor_fullnote.xbm  cursor_halfnote.xbm  cursor_tinystroke.xbm  dcross.ppm  dcross_icon.xbm  endbar.ppm  endbar.xbm  fermate_ab.ppm  fermate_ab.xbm  fermate_be.ppm  fermate_be_red.ppm  flagdown_red.ppm  full_red.ppm  pedoff_red.ppm  per_cross.xbm  per_rect_grey.ppm  per_triang_grey.ppm  r128_red.ppm  r16_mag.ppm  r64_grey.ppm  repOpenClose_red.ppm  repOpen_red.ppm  rfull_red.ppm  rquarter.ppm  rquarter_grey.ppm  segno.xbm  segno_red.ppm  sforzando.xbm  sforzato_ab.ppm  strong_pizzicato_ab_red.ppm  time_24.xbm  tinyflag_grey.ppm  tinyflag_red.ppm  treble_red.ppm  treblep.xbm  trill_red.ppm  tuplet2.ppm  (+5 more)
trunk/po/: SConscript  de.po  es.po  fr.po  hu.po  it.po  ja.po  noteedit.pot  pt.po  ru.po  sk.po  sl.po  sv.po
trunk/scons_admin/: generic.py  kde.py  kde3.py  midi.py
(+233 files in other folders)
