# Add all of your pixmaps here
data_ICON = 128thnote 32ndnote 64thnote arpegg beamednote breve chordnames cleficon cross dottednote doublebar doublecross doubledottednote doubleflat editicon eightnote endbar fermatenote flat fullnote halfnote hiddenrest kbicon keyicon midikeyboard natur noteedit pedofficon pedonicon perccross perccross2 perccrosscirc percrect perctrian portatonote quarternote recordicon redkbicon repclose repntimes repopen repopenclose rivet selector sforzandonote sforzatonote singlekey sixteenthnote slurednote speaker staccatonote stemdownicon stemupicon strpizzicatonote tiednote timeicon tinyeight tinysixteenth tinystroke tripletnotes voichange

# This is where it will all be installed
datadir = ${prefix}/share/apps/noteedit/icons
