resourcesdir = $(kde_datadir)/noteedit/resources
resources_DATA = alto.ppm alto.xbm alto_red.ppm altom.ppm altom.xbm altom_red.ppm \
arpegg.ppm arpegg.xbm breve.ppm  breve.xbm  breve_grey.ppm  breve_red.ppm \
altop.ppm altop.xbm altop_red.ppm bass.ppm bass.xbm bass_red.ppm bassm.ppm \
bassm.xbm bassm_red.ppm bassp.ppm bassp.xbm bassp_red.ppm \
coda.ppm  coda.xbm  coda_red.ppm \
cursor_128thnote.xbm cursor_32ndnote.xbm cursor_64thnote.xbm cursor_breve.xbm \
cursor_edit.xbm cursor_eightnote.xbm cursor_fullnote.xbm cursor_halfnote.xbm \
cursor_quarternote.xbm cursor_sixteenthnote.xbm cursor_tinyeight.xbm \
cursor_tinysixteenth.xbm cursor_tinystroke.xbm cross.ppm \
cross.xbm cross_grey.ppm cross_icon.ppm cross_icon.xbm cross_red.ppm dalSegnoAlCoda.ppm \
dalSegnoAlCoda.xbm  dalSegnoAlCoda_red.ppm  dcross.ppm \
dcross.xbm dcross_grey.ppm dcross_icon.ppm dcross_icon.xbm dcross_red.ppm dflat.ppm \
dflat.xbm dflat_grey.ppm dflat_red.ppm endbar.ppm endbar.xbm endbar_red.ppm \
flat_icon.xbm flat_icon.ppm fanfare.mp3 fermate_ab.ppm fermate_ab.xbm fermate_ab_red.ppm \
drum_bass_clef.ppm  drum_bass_clef.xbm  drum_bass_clef_red.ppm  drum_clef.ppm  drum_clef.xbm  drum_clef_red.ppm \
fermate_be.ppm fermate_be.xbm fermate_be_red.ppm flag.ppm flag.xbm flag_grey.ppm \
flag_red.ppm flagdown.ppm flagdown.xbm flagdown_grey.ppm flagdown_red.ppm flat.ppm \
flat.xbm flat_grey.ppm flat_red.ppm full.ppm \
full.xbm full_grey.ppm full_red.ppm natur.ppm natur.xbm natur_grey.ppm \
natur_icon.ppm natur_icon.xbm natur_red.ppm nbase.ppm nbase.xbm nbase_grey.ppm \
nbase_red.ppm pedoff.ppm  pedoff.xbm  pedoff_red.ppm  pedon.ppm  pedon.xbm  pedon_red.ppm \
per_cross.ppm per_cross.xbm per_cross2.ppm per_cross2.xbm per_cross2_grey.ppm \
per_cross2_red.ppm per_cross_circ.ppm per_cross_circ.xbm per_cross_circ_grey.ppm \
per_cross_circ_red.ppm per_cross_grey.ppm \
per_cross_red.ppm per_rect.ppm per_rect.xbm per_rect_grey.ppm per_rect_red.ppm per_triang.ppm \
per_triang.xbm per_triang_grey.ppm per_triang_red.ppm portato.ppm portato.xbm portato_red.ppm \
r128.ppm r128.xbm r128_grey.ppm r128_mag.ppm r128_red.ppm r16.ppm \
r16.xbm r16_grey.ppm r16_mag.ppm r16_red.ppm r32.ppm r32.xbm \
r32_grey.ppm r32_mag.ppm r32_red.ppm r64.ppm r64.xbm r64_grey.ppm \
r64_mag.ppm r64_red.ppm r8.ppm r8.xbm r8_grey.ppm r8_mag.ppm \
r8_red.ppm repClose.ppm repClose.xbm repClose_red.ppm repOpen.ppm repOpen.xbm \
repOpenClose.ppm  repOpenClose.xbm  repOpenClose_red.ppm \
repOpen_red.ppm rfull.ppm rfull.xbm rfull_grey.ppm rfull_mag.ppm rfull_red.ppm \
rhalf.ppm rhalf.xbm rhalf_grey.ppm rhalf_mag.ppm rhalf_red.ppm rquarter.ppm \
rquarter.xbm rquarter_grey.ppm rquarter_mag.ppm rquarter_red.ppm segno.ppm  segno.xbm  segno_red.ppm sforzando.ppm sforzando.xbm \
sforzando_red.ppm sforzato_ab.ppm sforzato_ab.xbm sforzato_ab_red.ppm sforzato_be.ppm sforzato_be.xbm \
sforzato_be_red.ppm stop_icon.ppm stop_icon.xbm strong_pizzicato_ab.ppm strong_pizzicato_ab.xbm strong_pizzicato_ab_red.ppm \
strong_pizzicato_be.ppm strong_pizzicato_be.xbm strong_pizzicato_be_red.ppm time_24.ppm \
time_24.xbm time_34.ppm time_34.xbm time_38.ppm time_38.xbm time_44.ppm \
time_44.xbm time_68.ppm time_68.xbm tinybase.ppm tinybase.xbm \
tinybase_grey.ppm tinybase_red.ppm tinyflag.ppm tinyflag.xbm \
tinyflag_grey.ppm tinyflag_red.ppm treble.ppm treble.xbm treble_red.ppm \
treblem.ppm treblem.xbm treblem_red.ppm treblep.ppm treblep.xbm treblep_red.ppm \
trill.ppm trill.xbm trill_red.ppm warn1.png warn2.png \
tuplet10.ppm  tuplet10.xbm tuplet2.ppm tuplet2.xbm tuplet3.ppm  tuplet3.xbm tuplet4.ppm  tuplet4.xbm  \
tuplet5.ppm  tuplet5.xbm tuplet6.ppm  tuplet6.xbm tuplet7.ppm \
tuplet7.xbm tuplet8.ppm tuplet8.xbm  tuplet9.ppm tuplet9.xbm


